--- a/src/Components/Header/Navbar.module.css
+++ b/src/Components/Header/Navbar.module.css
@@ -1,18 +1,4 @@
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5rem;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: -10ch;
-    padding: 0 20%;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 10;
-   
-
+.nav {
+   background: #6c05fc;
   }
- 
+  
