--- a/src/Components/ViewBlog/Lists/Blog.module.css
+++ b/src/Components/ViewBlog/Lists/Blog.module.css
@@ -1,28 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
-.title{
-    margin:auto;
-    margin-top:15%;
-    text-align: center;
-    font-weight: bolder;
-    font-size: 5ch;
-}
-.root {
-    max-width: 1000px;
-    margin:auto;
-    border-radius:20px;
-    margin-top: 3%;
-   
-    margin-bottom: 10%;
 
-  }
-  .media{
-   
-    height:450px;
-  }
-  .blogPost{
-      max-width: 900px;
-      margin-left: 5%;
-      margin-top: 10%;
-      font-size: 2.5ch;
-      font-family: 'Roboto', sans-serif;
-  }
+
+@media screen and (min-width: 800px){
+    .root{
+        margin:auto;
+        max-width: 800px;
+         margin-left: 20ch;
+      
+       }
+}
